unpackaged/main/default/objects/Opportunity/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi Select Promo</fullName>
            </value>
            <value>
                <fullName>Solus Promo</fullName>
            </value>
            <value>
                <fullName>Brand Solutions</fullName>
            </value>
            <value>
                <fullName>Always On</fullName>
            </value>
            <value>
                <fullName>Deals</fullName>
            </value>
            <value>
                <fullName>Sitewide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>