unpackaged/main/default/objects/Opportunity/fields/Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Id__c</fullName>
    <description>US-0009927 - Update PG Opportunity Flow</description>
    <externalId>true</externalId>
    <label>Proposal Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>