unpackaged/main/default/objects/Opportunity/fields/Quality_Item_condition__c.field-meta.xml
<CustomField>
    <fullName>Quality_Item_condition__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Quality/Item condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>