unpackaged/main/default/objects/Opportunity/fields/Quote_Selected__c.field-meta.xml
<CustomField>
    <fullName>Quote_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Selected</label>
    <type>Checkbox</type>
</CustomField>