unpackaged/main/default/objects/Opportunity/fields/Quote_Sync_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sync_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008007</description>
    <label>Quote Sync In Progress</label>
    <type>Checkbox</type>
</CustomField>