unpackaged/main/default/objects/Opportunity/fields/Rate_Card_Available__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Rate Card Available || 00568884 |</description>
    <label>Rate Card Exception Request</label>
    <type>Checkbox</type>
</CustomField>