unpackaged/main/default/objects/Opportunity/fields/Rate_Discount_I__c.field-meta.xml
<CustomField>
    <fullName>Rate_Discount_I__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>CASE(Name_Discount_I__c, 
&#39;Neukundenrabatt&#39;,0.2,
&#39;Kundenrabatt&#39;,Account.Customer_Discount__c,
&#39;10%&#39;,0.1,
&#39;12.5%&#39;,0.125,
&#39;15%&#39;,0.15,
&#39;17%&#39;,0.17,
&#39;17.5%&#39;,0.175,
&#39;18.5%&#39;,0.185,
&#39;20%&#39;,0.2,
&#39;30%&#39;,0.3,
&#39;50%&#39;,0.5,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Discount I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>