unpackaged/main/default/objects/Opportunity/fields/Rate_Discount_II__c.field-meta.xml
<CustomField>
    <fullName>Rate_Discount_II__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Rate Discount II</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>