unpackaged/main/default/objects/Opportunity/fields/Rate_Special_Agency_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Special_Agency_Discount__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Rate Special Agency Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>