unpackaged/main/default/objects/Opportunity/fields/Reason_For_Closed_Lost_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Closed_Lost_Deferred__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <inlineHelpText>Please select the reason for an opportunity closed/lost</inlineHelpText>
    <label>Reason For Closed Lost/Deferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Assigned</fullName>
            </value>
            <value>
                <fullName>Bad Experience with eBay, Inc.</fullName>
            </value>
            <value>
                <fullName>Budget Restraints</fullName>
            </value>
            <value>
                <fullName>Canceled Contract</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Doesn’t see value</fullName>
            </value>
            <value>
                <fullName>Low Inventory</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out Of Business</fullName>
            </value>
            <value>
                <fullName>Staffing Issues</fullName>
            </value>
            <value>
                <fullName>Went With Competitor</fullName>
            </value>
            <value>
                <fullName>Send to Scaling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>