unpackaged/main/default/objects/Opportunity/fields/Reason_for_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Lost__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Opportunity Lost Reason ||</description>
    <label>Reason for Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancellation due to IAS infractions</fullName>
            </value>
            <value>
                <fullName>Cancellation due to Performance</fullName>
            </value>
            <value>
                <fullName>Cancellation due to Viewability metrics</fullName>
            </value>
            <value>
                <fullName>Customer service issues</fullName>
            </value>
            <value>
                <fullName>Duplicate entry</fullName>
            </value>
            <value>
                <fullName>Lost due to competition</fullName>
            </value>
            <value>
                <fullName>Lost due to date delay/change</fullName>
            </value>
            <value>
                <fullName>Lost due to lack of inventory/marketing avails</fullName>
            </value>
            <value>
                <fullName>Lost due to lack of product (ie. video)</fullName>
            </value>
            <value>
                <fullName>Lost due to pricing</fullName>
            </value>
            <value>
                <fullName>Lost other</fullName>
            </value>
            <value>
                <fullName>No customer feedback</fullName>
            </value>
            <value>
                <fullName>Proactive proposal ; No budget and/or feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>