unpackaged/main/default/objects/Opportunity/fields/Report_Language__c.field-meta.xml
<CustomField>
    <fullName>Report_Language__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Report Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>