unpackaged/main/default/objects/Opportunity/fields/Reporting_Active__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Reporting Active</label>
    <type>Checkbox</type>
</CustomField>