unpackaged/main/default/objects/Opportunity/fields/Reporting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_End_Date__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Reporting End Date</label>
    <type>Date</type>
</CustomField>