unpackaged/main/default/objects/Opportunity/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Sales Rep  ||</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>