unpackaged/main/default/objects/Opportunity/fields/SAP_ID_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID_Overwrite__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>SAP ID Overwrite</label>
    <length>40</length>
    <type>Text</type>
</CustomField>