unpackaged/main/default/objects/Opportunity/fields/SAS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>SAS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>SAS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>