unpackaged/main/default/objects/Opportunity/fields/Seller_Account__c.field-meta.xml
<CustomField>
    <fullName>Seller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011567 - New field for Seller lookup on Opportunity</description>
    <label>Seller Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Seller Account)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>