unpackaged/main/default/objects/Opportunity/fields/Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Shopping Cart</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.EBH_PartnerType__c</field>
            <operation>equals</operation>
            <value>Shop System</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Shopping Cart)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>