unpackaged/main/default/objects/Opportunity/fields/Signed_Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Signed Contract Attached</label>
    <type>Checkbox</type>
</CustomField>