unpackaged/main/default/objects/Opportunity/fields/SKUs__c.field-meta.xml
<CustomField>
    <fullName>SKUs__c</fullName>
    <description>US-0008585 - [NA] Merchant Integration - Initiate help request
INTEG - N || CODE - N || WF - N || AP - N || VAL - N || CLASS – (Internal) || SKUs|| CR - 02575449</description>
    <label>SKUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>