unpackaged/main/default/objects/Opportunity/fields/Special_Agency_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Agency_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Special Agency Discount</label>
    <type>Checkbox</type>
</CustomField>