unpackaged/main/default/objects/Opportunity/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Special Terms ||</description>
    <label>Special Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>