unpackaged/main/default/objects/Opportunity/fields/Splitting_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Splitting_Invoices__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Splitting Invoices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO#</fullName>
            </value>
            <value>
                <fullName>managerial country</fullName>
            </value>
            <value>
                <fullName>Profit Center</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>