unpackaged/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Campaign Start Date  ||</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>