unpackaged/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled During Campaign</fullName>
            </value>
            <value>
                <fullName>Cancelled Before Campaign</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Pending Launch</fullName>
            </value>
            <value>
                <fullName>Campaign Live</fullName>
            </value>
            <value>
                <fullName>Campaign Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>