unpackaged/main/default/objects/Opportunity/fields/Supported_by_Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Supported_by_Account_Management__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Insights Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>One-Pager/Fact Sheets</fullName>
            </value>
            <value>
                <fullName>Press release</fullName>
            </value>
            <value>
                <fullName>Create Segments</fullName>
            </value>
            <value>
                <fullName>Post data</fullName>
            </value>
            <value>
                <fullName>Pre data</fullName>
            </value>
            <value>
                <fullName>Client meeting/call support</fullName>
            </value>
            <value>
                <fullName>Brand comparison data</fullName>
            </value>
            <value>
                <fullName>Pro-active optimizations (UK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>