unpackaged/main/default/objects/Opportunity/fields/Target_BD_Win_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_BD_Win_Date__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <inlineHelpText>Targeted Win Date set by Sales Rep</inlineHelpText>
    <label>Target BD Win Date</label>
    <type>Date</type>
</CustomField>