unpackaged/main/default/objects/Opportunity/fields/Target_Live_to_Site_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Live_to_Site_Date__c</fullName>
    <description>US-0008585 - [NA] Merchant Integration - Initiate help request

INTEG- Y &#39; DM takes this field &#39; || APEX – N || CC - N || 
WF – Y &#39; xxxx&#39; || AP – N || FU – N || OM - N|| 
Desc – &#39;Date that the merchant wants to go live‘ || 
VAL - Y &#39; NA_RM_Target_LTS_Date_Required&#39; || CR# - 7486 ||</description>
    <inlineHelpText>Forecasted LIVE date</inlineHelpText>
    <label>Target Live to Site Date</label>
    <type>Date</type>
</CustomField>