unpackaged/main/default/objects/Opportunity/fields/This_User_Name__c.field-meta.xml
<CustomField>
    <fullName>This_User_Name__c</fullName>
    <formula>$User.FirstName+&quot; &quot;+$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This User Name</label>
    <type>Text</type>
</CustomField>