unpackaged/main/default/objects/Opportunity/fields/Tier1Budget__c.field-meta.xml
<CustomField>
    <fullName>Tier1Budget__c</fullName>
    <description>US-0007876</description>
    <label>Tier 1 Budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>