unpackaged/main/default/objects/Opportunity/fields/Tier2Budget__c.field-meta.xml
<CustomField>
    <fullName>Tier2Budget__c</fullName>
    <description>US-0007876</description>
    <label>Tier 2 Budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>