unpackaged/main/default/objects/Opportunity/fields/To_be_accrued__c.field-meta.xml
<CustomField>
    <fullName>To_be_accrued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>To be accrued same month as delivery</label>
    <type>Checkbox</type>
</CustomField>