unpackaged/main/default/objects/Opportunity/fields/Total_Revised_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Revised_Amount__c</fullName>
    <formula>IO__r.Rollup_Summary_Total_Order_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revised Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>