unpackaged/main/default/objects/Opportunity/fields/Type_of_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vendor__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>