unpackaged/main/default/objects/Opportunity/fields/VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>VAT_Code__c</fullName>
    <description>US-0009221 - [Ads 2020] Field &amp; Formulas for Revenue Recognition and Compliance</description>
    <formula>IF(Company_Code__c = &quot;0062&quot; &amp;&amp; Country_Code__c = &quot;DE&quot;, &quot;A4&quot;,
IF(Company_Code__c = &quot;0062&quot; &amp;&amp;  locatedInEU__c  = TRUE, &quot;B1&quot;,
IF(Company_Code__c = &quot;0062&quot; &amp;&amp; locatedInEU__c = FALSE, &quot;A7&quot;,
IF(Company_Code__c = &quot;0075&quot; &amp;&amp; Country_Code__c = &quot;UK&quot;, &quot;A9&quot;,
IF(Company_Code__c = &quot;0075&quot; &amp;&amp; Country_Code__c &lt;&gt; &quot;UK&quot;, &quot;A7&quot;,
IF(Company_Code__c = &quot;0111&quot; &amp;&amp; Country_Code__c &lt;&gt; &quot;UK&quot;, &quot;A7&quot;,

&quot;#NA#&quot;
))))))</formula>
    <label>VAT Code</label>
    <type>Text</type>
</CustomField>