unpackaged/main/default/objects/Opportunity/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>INTEG- N || APEX – N || CC - N || 
WF – Y || AP – N || FU – N || OM - N|| 
Desc – ‘Vertical/Industry value for Opportunity || 
VAL - N || CR# - 27261 &amp; 43498 ||
INTEG- N || APEX – N || CC - N || 
WF – N || AP – N || FU – N || OM - N|| 
Desc – ‘Adding one value and removing three for NA POS Opp vertical picklist&#39;|| 
VAL - N || CR# - 64173||

US-0008585 - [NA] Merchant Integration - Initiate help request</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Apparel / Accessories</fullName>
            </value>
            <value>
                <fullName>Automotive Parts / Accessories</fullName>
            </value>
            <value>
                <fullName>B&amp;I</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Books / Music / Video</fullName>
            </value>
            <value>
                <fullName>Business &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>Collectibles &amp; Art</fullName>
            </value>
            <value>
                <fullName>Computers / Electronics</fullName>
            </value>
            <value>
                <fullName>Convenience / Gas</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>Department Store</fullName>
            </value>
            <value>
                <fullName>Discount Department Stores</fullName>
            </value>
            <value>
                <fullName>Drug</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; Gift Cards</fullName>
            </value>
            <value>
                <fullName>Emerging Verticals</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
            <value>
                <fullName>EV-B</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Flowers / Gifts</fullName>
            </value>
            <value>
                <fullName>Food / Drug</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Gift Cards</fullName>
            </value>
            <value>
                <fullName>H&amp;G</fullName>
            </value>
            <value>
                <fullName>Hardware / Home Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>