unpackaged/main/default/objects/Opportunity/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Weekday</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interval__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>