unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_Tool__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Tool__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>3rd Party Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>