unpackaged/main/default/objects/Opportunity/fields/Your_order_no_1__c.field-meta.xml
<CustomField>
    <fullName>Your_order_no_1__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>LEFT( Your_order_no__c , 35)</formula>
    <label>Your order no. 1</label>
    <type>Text</type>
</CustomField>