unpackaged/main/default/objects/Opportunity/fields/Your_order_no_2__c.field-meta.xml
<CustomField>
    <fullName>Your_order_no_2__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>MID(Your_order_no__c,36,35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Your order no. 2</label>
    <type>Text</type>
</CustomField>