unpackaged/main/default/objects/Opportunity/fields/Your_order_no__c.field-meta.xml
<CustomField>
    <fullName>Your_order_no__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Your order no.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>