unpackaged/main/default/objects/Opportunity/recordTypes/eBay.recordType-meta.xml
<RecordType>
    <fullName>eBay</fullName>
    <active>true</active>
    <businessProcess>eBay Advertising</businessProcess>
    <label>eBay Ads - Direct</label>
</RecordType>