unpackaged/main/default/objects/Opportunity/recordTypes/eBay_Ads_Direct_Revision_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>eBay_Ads_Direct_Revision_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Direct Incremental</businessProcess>
    <label>eBay Ads - Incremental Placeholder</label>
</RecordType>