unpackaged/main/default/objects/Opportunity/recordTypes/eBay_NA_Acquisition.recordType-meta.xml
<RecordType>
    <fullName>eBay_NA_Acquisition</fullName>
    <active>true</active>
    <businessProcess>eBay NA Opportunity</businessProcess>
    <label>eBay NA Acquisition</label>
</RecordType>