unpackaged/main/default/objects/Opportunity/recordTypes/Private_Marketplace.recordType-meta.xml
<RecordType>
    <fullName>Private_Marketplace</fullName>
    <active>true</active>
    <businessProcess>eBay Advertising</businessProcess>
    <label>eBay Ads - Private Marketplace</label>
</RecordType>