unpackaged/main/default/objects/Opportunity/recordTypes/Programmatic.recordType-meta.xml
<RecordType>
    <fullName>Programmatic</fullName>
    <active>true</active>
    <businessProcess>eBay Advertising</businessProcess>
    <label>eBay Ads - Programmatic Guaranteed</label>
</RecordType>