unpackaged/main/default/objects/Opportunity/validationRules/Advertiser_Accounts_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Advertiser_Accounts_Only</fullName>
    <active>true</active>
    <description>you can only create an opportunity against an advertiser account</description>
    <errorConditionFormula>AND(

$Setup.byPass__c.ByPass_Validation__c = FALSE,
NOT(Account.Record_Type_Text__c = &#39;Advertiser&#39;),


OR(
RecordType.DeveloperName = $Label.OPP_RECORDTYPEDEVNAME_DIRECT,
RecordType.DeveloperName = $Label.OPP_RECORDTYPEDEVNAME_PROGRAMMATIC,
RecordType.DeveloperName = $Label.OPP_RECORDTYPEDEVNAME_PMP
)

)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>This is not an advertiser account.</errorMessage>
</ValidationRule>