unpackaged/main/default/objects/Opportunity/validationRules/Closed_Canceled_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Canceled_Stage</fullName>
    <active>true</active>
    <description>cannot change stage value after it is closed canceled</description>
    <errorConditionFormula>AND(

$Profile.Name = &quot;Standard Ads User Profile&quot;,

OR(
RecordType.DeveloperName = $Label.OPP_RECORDTYPEDEVNAME_DIRECT,
RecordType.DeveloperName = $Label.OPP_RECORDTYPEDEVNAME_PROGRAMMATIC,
RecordType.DeveloperName = $Label.OPP_RECORDTYPEDEVNAME_PMP
),

ISPICKVAL(
PRIORVALUE(StageName), &#39;Closed Canceled&#39;),


$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator - Limited Privileges&quot;,
$User.LastName &lt;&gt; &quot;Adkins&quot;,

$Setup.byPass__c.ByPass_Validation__c = FALSE

)</errorConditionFormula>
    <errorMessage>Cannot change stage once it is Closed Canceled</errorMessage>
</ValidationRule>